--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.5",
+    "@prisma/adapter-neon": "^5.19.1",
+    "@prisma/client": "^5.19.1",
     "@types/express": "^4.17.21",
+    "@types/ws": "^8.5.12",
     "express": "^4.21.0",
+    "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   },
