--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "express": "^4.21.0",
     "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "dev:server": "ts-node-dev --respawn src/server.ts"
