--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/ws": "^8.5.12",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
     "prisma": "^5.19.1",
