--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,13 @@
     "@prisma/client": "^5.19.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/ws": "^8.5.12",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2",
