--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/ws": "^8.5.12",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
@@ -17,5 +18,8 @@
   },
   "scripts": {
     "dev:server": "ts-node-dev --respawn src/server.ts"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
