--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "zod": "^3.23.8"
   },
   "scripts": {
-    "dev:server": "ts-node-dev --respawn src/server.ts"
+    "dev:server": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc && && npm i && prisma generate && prisma migrate deploy",
+    "start": "node ./build/src/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17"
