--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "dev:server": "ts-node-dev --respawn src/server.ts",
-    "build": "tsc && && npm i && prisma generate && prisma migrate deploy",
+    "build": "tsc && npm i && prisma generate && prisma migrate deploy",
     "start": "node ./build/src/index.js"
   },
   "devDependencies": {
