--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dev:server": "ts-node-dev --respawn src/server.ts",
     "build": "npm install && tsc && prisma generate && prisma migrate deploy",
-    "start": "node ./build/src/index.js"
+    "start": "node ./dist/src/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17"
