--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.20.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
@@ -11,7 +11,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2",
     "zod": "^3.23.8"
@@ -22,6 +21,7 @@
     "start": "node ./dist/server.js"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "prisma": "^5.20.0"
   }
 }
