--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/react-text-mask": "^5.4.14"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/react-input-mask": "^3.0.6",
+    "react-input-mask": "^3.0.0-alpha.2"
   }
 }
